testsuite/resolution/compile-fail/unknown-symbol.verona
// Copyright (c) Microsoft Corporation. All rights reserved.
// Licensed under the MIT License.
class Main {
  // CHECK-L: unknown-symbol.verona:${LINE:+1}:6: error: Cannot find value for symbol 'Foo'
  f: Foo;

  // CHECK-L: unknown-symbol.verona:${LINE:+1}:11: error: Cannot find value for symbol 'Bar'
  main(): Bar {
    // CHECK-L: unknown-symbol.verona:${LINE:+1}:5: error: Cannot find value for symbol 'baz'
    baz
  }
}
